set02/problem07_compile_errors.txt
Compilation started at 11/7/2023, 4:30:27 PM
Compilation finished at 11/7/2023, 4:30:31 PM
Compilation started at 11/7/2023, 4:32:17 PM
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem07.c: In function 'main':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem07.c:15:5: warning: implicit declaration of function 'print' [-Wimplicit-function-declaration]
     print("%f %f",tri.base,tri.altitude);
     ^~~~~
C:\Users\zaina\AppData\Local\Temp\cc3jq6nM.o: In function `main':
c:/Users/zaina/github-classroom/FPC-advanced/fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz/set02/problem07.c:15: undefined reference to `print'
collect2.exe: error: ld returned 1 exit status
Compilation finished at 11/7/2023, 4:32:21 PM
Compilation started at 11/7/2023, 4:32:27 PM
Compilation finished at 11/7/2023, 4:32:31 PM
Compilation started at 11/7/2023, 4:33:05 PM
Compilation finished at 11/7/2023, 4:33:09 PM
Compilation started at 11/7/2023, 4:39:00 PM
Compilation finished at 11/7/2023, 4:39:04 PM
Compilation started at 11/7/2023, 4:43:20 PM
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem07.c: In function 'main':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem07.c:17:15: error: incompatible type for argument 1 of 'find_area'
     find_area(tri);
               ^~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem07.c:10:6: note: expected 'Triangle * {aka struct _triangle *}' but argument is of type 'Triangle {aka struct _triangle}'
 void find_area(Triangle *t);
      ^~~~~~~~~
Compilation finished at 11/7/2023, 4:43:22 PM
Compilation started at 11/7/2023, 4:44:23 PM
Compilation finished at 11/7/2023, 4:44:26 PM
Compilation started at 11/7/2023, 4:47:28 PM
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem07.c: In function 'find_area':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem07.c:35:12: warning: 'return' with a value, in function returning void
     return t;
            ^
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem07.c:32:6: note: declared here
 void find_area(Triangle t)
      ^~~~~~~~~
Compilation finished at 11/7/2023, 4:47:32 PM
Compilation started at 11/7/2023, 4:57:39 PM
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem07.c: In function 'find_area':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem07.c:34:6: error: 't' is a pointer; did you mean to use '->'?
     t.area = 0.5*t.base*t.altitude;
      ^
      ->
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem07.c:34:19: error: 't' is a pointer; did you mean to use '->'?
     t.area = 0.5*t.base*t.altitude;
                   ^
                   ->
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem07.c:34:26: error: 't' is a pointer; did you mean to use '->'?
     t.area = 0.5*t.base*t.altitude;
                          ^
                          ->
Compilation finished at 11/7/2023, 4:57:41 PM
Compilation started at 11/7/2023, 4:58:22 PM
Compilation finished at 11/7/2023, 4:58:27 PM
Compilation started at 11/7/2023, 5:00:17 PM
Compilation finished at 11/7/2023, 5:00:20 PM
Compilation started at 11/19/2023, 12:53:48 AM
Compilation finished at 11/19/2023, 12:53:52 AM
Compilation started at 11/25/2023, 6:51:05 AM
Compilation finished at 11/25/2023, 6:51:10 AM
